[tool.poetry]
name = "Nommer"
version = "0.1.0"
description = "Nommer is a food delivery app"
authors = ["Jim Kelly <pthread1981@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.0"
peewee = "^3.8"
peewee_extra_fields = "^2.5"
psycopg2-binary = "^2.7"
gunicorn = "^19.9"
marshmallow = "^2.18"
simplejson = "^3.16"
marshmallow_enum = "^1.4"
marshmallow_jsonapi = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^4.1"
pytest-cov = "^2.6"
pytest-mypy = "^0.3.2"
pytest-black = "^0.3.3"
pytest-flakes = "^4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
