[tool.poetry]
name = "nommer-cli"
version = "0.1.0"
description = "Make orders for nommer!"
authors = ["Jim Kelly <pthread1981@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.21"
PyInquirer = "^1.0"
colorama = "^0.4.1"
termcolor = "^1.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
nommer = "nommer_cli:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
